WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
131071
willReveal edge events should be hooked up for overflow:scroll
https://bugs.webkit.org/show_bug.cgi?id=131071
Summary
willReveal edge events should be hooked up for overflow:scroll
Beth Dakin
Reported
2014-04-01 15:30:37 PDT
Our new willRevealBottom/Top/Left/Right events should be hooked up for overflow:scroll. <
rdar://problem/16190392
>
Attachments
Patch
(15.23 KB, patch)
2014-04-01 15:38 PDT
,
Beth Dakin
no flags
Details
Formatted Diff
Diff
Patch
(15.32 KB, patch)
2014-04-01 15:45 PDT
,
Beth Dakin
sam
: review+
Details
Formatted Diff
Diff
Show Obsolete
(1)
View All
Add attachment
proposed patch, testcase, etc.
Beth Dakin
Comment 1
2014-04-01 15:38:22 PDT
Created
attachment 228329
[details]
Patch
WebKit Commit Bot
Comment 2
2014-04-01 15:39:26 PDT
Attachment 228329
[details]
did not pass style-queue: ERROR: Source/WebCore/dom/Document.cpp:5623: Weird number of spaces at line-start. Are you using a 4-space indent? [whitespace/indent] [3] Total errors found: 1 in 8 files If any of these errors are false positives, please file a bug against check-webkit-style.
Beth Dakin
Comment 3
2014-04-01 15:45:17 PDT
Created
attachment 228330
[details]
Patch
WebKit Commit Bot
Comment 4
2014-04-01 15:46:20 PDT
Attachment 228330
[details]
did not pass style-queue: ERROR: Source/WebCore/dom/Document.cpp:5623: Weird number of spaces at line-start. Are you using a 4-space indent? [whitespace/indent] [3] Total errors found: 1 in 8 files If any of these errors are false positives, please file a bug against check-webkit-style.
Sam Weinig
Comment 5
2014-04-01 20:12:42 PDT
Comment on
attachment 228330
[details]
Patch View in context:
https://bugs.webkit.org/attachment.cgi?id=228330&action=review
> Source/WebCore/dom/Document.cpp:5618 > + // For each edge (top, bottom, left and right), send the will reveal edge event for that direction
You have an extra space here.
> Source/WebCore/dom/Document.h:1177 > + void sendWillRevealEdgeEventsIfNeeded(const IntPoint& oldPosition, const IntPoint& newPosition, const IntRect& visibleRect, const IntSize& contentsSize, Element* target = 0);
You should use Element* target = nullptr. I would also rename this to enqueueWillRevealEdgeEventsIfNeeded. This might also be better on the DocumentEventQueue class, not sure.
Beth Dakin
Comment 6
2014-04-01 21:50:33 PDT
(In reply to
comment #5
)
> (From update of
attachment 228330
[details]
) > View in context:
https://bugs.webkit.org/attachment.cgi?id=228330&action=review
> > > Source/WebCore/dom/Document.cpp:5618 > > + // For each edge (top, bottom, left and right), send the will reveal edge event for that direction > > You have an extra space here. > > > Source/WebCore/dom/Document.h:1177 > > + void sendWillRevealEdgeEventsIfNeeded(const IntPoint& oldPosition, const IntPoint& newPosition, const IntRect& visibleRect, const IntSize& contentsSize, Element* target = 0); > > You should use Element* target = nullptr. I would also rename this to enqueueWillRevealEdgeEventsIfNeeded. This might also be better on the DocumentEventQueue class, not sure.
Fixed both. Thanks, Sam!
http://trac.webkit.org/changeset/166630
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug